<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CaleRem</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="Contact">Contacts Info</string>
    <string name="Name">Name</string>
    <string name="Last">LastName</string>
    <string name="Phone">Phone</string>
    <string name="Date">Date</string>
    <string name="Email">Email</string>
    <string name="Desc">Description</string>
    <string name="Type">Type</string>
    <string name="TitleV">View Event</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="SaveButton">Save</string>
    <string name="notifyDate">Notification Date - DD.MM.YYYY</string>
    <string name="whoCelebrates">Who is celebrating</string>
    <string name="remindText">Remind me to do ..........</string>
    <string name="dateTitleToRemind">Reminder setted on:</string>
    <string name="settedDate">setted date to remind - DD.MM.YYYY</string>
    <string name="settedTime">setted time to remind - HH.MM</string>
    <string name="evType">Event Type</string>

</resources>