<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/notiDt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/notifyDate"
        android:textColor="#3366FF"
        android:gravity="center" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/celebPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/whoCelebrates"/>

    <EditText
        android:id="@+id/remText"
        android:layout_width="278dp"
        android:layout_height="206dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/remindText" />

    <EditText
        android:id="@+id/dtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/dateTitleToRemind"
        android:textColor="#3366FF" 
        android:gravity="center"/>

    <EditText
        android:id="@+id/setDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:text="@string/settedDate" />

    <EditText
        android:id="@+id/setTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:text="@string/settedTime" />

</LinearLayout>