<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/TitleV" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="45"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
             />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type" />

        <EditText
            android:id="@+id/etType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date" />

        <EditText
            android:id="@+id/etDt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Desc" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="45"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Contact" />

        <TextView
            android:id="@+id/tvNameC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/etNameC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Last" />

        <EditText
            android:id="@+id/etLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone" />

        <EditText
            android:id="@+id/etPhn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/etMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:inputType="text"/>
    </LinearLayout>

</LinearLayout>